# fractal-amadeus

./: .env.example  .gitignore  Cargo.toml  README.md  conftest.py  pyproject.toml  repomix.config.json  test.sh
.github/workflows/: rust.yml
docs/: FUTURE_DIRECTIONS.md  claude_a_b.txt  double_loop_tdd_white_paper.md  fractal-amadeus-rust-whitepaper.md  fractal_amadeus_sketch_summary.md  latest_preprompt.md  milestone_1_preprompt.md  milestone_2.md  milestone_3.md  milestones.md  room-for-future-improvements.md  todo.md
fractal_amadeus/core/: __init__.py
fractal_amadeus/core/amadeus_client/: __init__.py
src/: goal_tracker.rs  kurisu_shell.rs  lib.rs  main.rs  memory_graph.rs  proof_engine.rs
tests/: e2e_smoke_test.py  integration_tests.rs
tests/functional_tests/: e2e_smoke_test.py  test_basic_usage_scenario.py  test_basic_usage_scenarios.py
tests/unit_tests/: test_okabe_message_flow.py
