[package]
name = "fractal_amadeus"
version = "0.1.0"
edition = "2021"
description = "A proof-of-alignment node for coherent epistemology"
authors = ["David Purdy <wizzardx@gmail.com>"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
chrono = "0.4"

[dev-dependencies]
tempfile = "3.3"
