[tool.poetry]
name = "fractal-amadeus"
version = "0.1.0"
description = "A lightweight Kurisu emulator (e.g., Lean4 or Python) for scientific dialogue, not full AGI"
authors = ["David <wizzardx@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "fractal_amadeus"}]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.32.3"
dotenv = "^0.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
